@@ -109,3 +109,4 @@ OPI 2.8
  - Added opiPresent error check into MOCS
  - Changed return from MOCS to include all opiPresent return fields.
  - fixed two bugs related to gaze feed in O900
+ - added checkFixationOK check to opiStaticStimulus, ZEST and MOCS (untested)
